--- a/src/css/about.css
+++ b/src/css/about.css
@@ -21,7 +21,7 @@
     display:flex;
     justify-content:space-evenly ;
     text-align: center;
-    border: 20px solid white;
+    border: 20px solid rgb(39, 71, 133);
     border-top: none;
     border-bottom-right-radius: 70px;
     border-bottom-left-radius: 70px;
@@ -43,10 +43,10 @@
 
 .anco-links a{
     padding: 5px;
-    border: 2px solid white;
+    border: 2px solid rgb(39, 71, 133);
     border-bottom: none;
     border-radius: 5px;
-    color: white;
+    color: rgb(39, 71, 133);
     text-decoration: none;
     background-color:transparent;
     box-shadow: 2px 2px 5px rgb(15, 15, 15)
@@ -55,7 +55,7 @@
 .anco-links a:hover{
     border: 2px solid rgb(39, 71, 133);
     border-bottom: none;
-    color:rgb(39, 71, 133);
-    background-color:white;
+    color:white;
+    background-color:rgb(39, 71, 133);
     box-shadow: 2px 2px 5px #ffffff
 }
